--- a/src/App.css
+++ b/src/App.css
@@ -41,17 +41,10 @@ body {
   font-weight: 600;
   font-size: 20px;
 }
-.list {
-  margin-top: 30px;
-  text-align: left;
-  padding-left: 20px;
-  padding-right: 20px;
+.login {
+  align-items: end;
 }
-.modal {
-  margin-top: 20px;
-  padding: 20px;
-  background: #eee;
-}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
